# SMIT

./: .dockerignore  .gitignore  .pylintrc  LICENSE  Main.ipynb  README.md  SMIT.code-workspace  create_df.py  csv_prepare.py  daysum.ipynb  docker-compose.yaml  gui_test.ipynb  handle_files.py  handle_logging.py  main.py  plot.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  scrape_data.py  scrapeandmove.py  setup.cfg  testauswertung.ipynb  testfile copy.toml  testfile.ipynb  testfile.py  testfile.toml  tox.ini  user_class.py  user_data.py  user_data.toml  user_settings.toml
.devcontainer/: Dockerfile  devcontainer.json
.dummy/config/: private_key.pem  public_key.pem
.github/workflows/: tests.yml
.streamlit/: pages.toml  secrets.toml
config/: dummy_settings.toml  private_key.pem  public_key.pem  requirements.txt  user_data.toml  user_file.toml  user_settings.toml
csv_workdir/daily/: 20230728_199996.csv
docs/: CODE_OF_CONDUCT.md
docs/SMIT/: application.html  filehandling.html  filepersistence.html  index.html  rsahandling.html  scrapedata.html  userinput.html
log/: dates.pkl
modules/: application.py  dynamicclass.py  filehandling.py  filepersistence.py  passwordhandling.py  rsahandling.py  scrapedata.py  user.py  userinput.py
opt/: Main.ipynb  appclass_play.py  classes_play.py  dummy_play  hash_pwd.py  inheritance_play.py  methods_play.py  pydantic_auth.py  return_values.py  rsa_play.py  rsa_test.toml  smit_logging.py  smitdb_clean.py  snippets.py  test_nb.ipynb  testing.py  tests_play.py  tkinter_play.py  toml_play.py  var_import.md
opt/app_setup/: user_data.toml
opt/archive_api/: fastapi_tutorial.py  old_db_schemas.py  pydantic_auth.py  smit_api.py
opt/archive_authentication/: auth_api.py  authenticate.py
opt/archive_gui/: __init__.py  buttons.py  checkboxes.py  main_window.py  stats.py
opt/archive_smit/: filehandling.py  scrapedata.py
opt/archive_sqlalchemy/: connection.py  crud.py  models.py  test_sqlalchemy
opt/archive_stgui/: cookie_manager.py  st_main.py
opt/archive_stgui/pages/: register.py
opt/archive_tests/: test_rsahandling.py
opt/dummy/: backup_dummy_data.toml  backup_dummy_settings.toml
opt/dummy_user/: DummyData_Ablesungen_Anlage_338901_Zaehlpunkt_AT0081000802000000000000000199996_Tagesübersicht.csv  DummyData_Ablesungen_Anlage_338901_Zaehlpunkt_AT0081000802000000000000000199997_Tagesübersicht.csv  dummy_data.toml  dummy_settings.toml
opt/old/: setup.cfg
src/SMIT/: __init__.py  application.py  ctk_framework.py  filehandling.py  filepersistence.py  gui_buttons.py  gui_checkboxes.py  gui_credentials.py  gui_main.py  gui_plots.py  gui_stats.py  rsahandling.py  scrapedata.py  user.py  userinput.py
src/SMIT/gui/: __init__.py  buttons.py  credentials.py  main_window.py  plots.py  stats.py
src/api/: api_exceptions.py  dependencies.py  main.py  response_schemas.py  schemas.py  smit_api.py
src/api/components/: authenticate.py
src/api/internal/SqlAlchemy/: connection.py  crud.py  models.py
src/api/opt/: users_mock.py
src/api/routes/: auth.py  crud.py  debug.py  users.py
src/authentication/: auth_api.py  auth_exceptions.py  authenticate.py
src/database/: connection.py  crud.py  db_admin.py  db_models.py  db_setup.py  db_users.py  users_crud.py
src/db/: auth_schema.py  connection.py  crud.py  db_exceptions.py  fly.toml  models.py  postgres.py  schema.py  schemas.py  smit_db.py  smitdb.py  users_schema.py
src/exceptions/: api_exc.py  db_exc.py
src/gui/: main_window.py
src/schemas/: auth_schemas.py  response_schemas.py  user_schemas.py
src/smit/: cookie_manager.py  core.py  filehandling.py  filepersistence.py  rsahandling.py  scrapedata.py  smit_api.py  st_api.py
src/st_auth/: auth_api.py  auth_exceptions.py  authenticate.py  cookie_manager.py  credentials_schema.py  pdtc_validation.py
src/st_gui/: st_main.py
src/st_gui/pages/: 00_Authentication.py  01_Register.py  97_st_debug.py  98_smit-db.py  99_core.py  debug.py  register.py
src/utils/: hasher.py  logger.py  users_mock.py
src/webgui/: strlit_main.py
src/webgui/pages/: 01_User.py  99_Debug.py
stromnetzgraz/: auswertung.ipynb  create_df.py  csv_prepare.py  date_updater.py  import.ipynb  scrape_data.py  user_data.py
tests/: __init__.py  conftest.py  old_setup.txt  test_api.py  test_appclass.py  test_application.py  test_auth_api.py  test_crud.py  test_database.py  test_db_engine.py  test_engine.py  test_filehandling.py  test_filepersistence.py  test_newapi.py  test_production_db.py  test_pytest.py  test_rsa.py  test_rsahandling.py  test_schemas.py  test_scrapedata.py  test_sqlalchemy.py  test_user.py  test_user_endpoints.py  test_users.py  test_users_crud.py
