[tool.poetry]
name = "smit"
version = "0.2.0"
description = "Scrape and plot energy usage data."
authors = ["Christian Koplenig <tmpck@gmx.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ChristianKoplenig/SMIT"
documentation = "https://filedn.eu/liu4e7QL6NoXLInqRT2UAQu/SMIT/index.html"
packages = [
    {include = "smit", from = "src"},
    {include = "gui", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "5.2.1"
matplotlib = "^3.8.0"
pandas = "^2.1.3"
rsa = "^4.9"
seaborn = "0.13.0"
selenium = "4.15.2"
tomlkit = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
tox = "^4.11.3"
tox-poetry-installer = "^1.0.0b1"

[tool.pytest.ini_options]
markers = [ 
    "smoke: Validate all core methods",
    "application: Test setup of application class",
    "crypto: Test rsa implementation",
    "osinterface: Move files, generate pandas dataframe",
    "persistence: Check dates variable",
    "scraping: Webdriver setup",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    minversion = 4.10.0
    envlist = py311, #flake8
    isolated_build = true

    [testenv]
    skip_install = true
    description = Use dummy setup to test SMIT application
    allowlist_externals = poetry
    require_locked_deps = true
    poetry_dep_groups = 
        dev
    commands_pre =
        poetry install
    commands =
        poetry run pytest --basetemp={envtmpdir} -v -m "smoke" #combine markers with or/and syntax

    [testenv:flake8]
    basepython = python3.11
    deps = flake8
    commands = flake8 --ignore=E201,E202,E203,E221,E222,E241 src
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
