[metadata]
name = SMIT
description = Smart Meter Interface Tool - Conveniently show and update your power usage 
author = Christian Koplenig
license = MIT
license_file = LICENSE
platform = linux, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = 
    SMIT
install_requires = 
    asttokens>=2.2.1
    attrs>=23.1.0
    backcall>=0.2.0
    certifi>=2023.7.22
    comm>=0.1.4
    contourpy>=1.1.0
    cycler>=0.11.0
    debugpy>=1.6.7.post1
    decorator>=5.1.1
    exceptiongroup>=1.1.3
    executing>=1.2.0
    fonttools>=4.42.1
    h11>=0.14.0
    idna>=3.4
    ipykernel>=6.25.1
    ipython>=8.14.0
    jedi>=0.19.0
    jupyter_client>=8.3.0
    jupyter_core>=5.3.1
    kiwisolver>=1.4.5
    matplotlib>=3.7.2
    matplotlib-inline>=0.1.6
    nest-asyncio>=1.5.7
    numpy>=1.25.2
    outcome>=1.2.0
    packaging>=23.1
    pandas>=2.0.3
    parso>=0.8.3
    pexpect>=4.8.0
    pickleshare>=0.7.5
    Pillow>=10.0.0
    platformdirs>=3.10.0
    prompt-toolkit>=3.0.39
    psutil>=5.9.5
    ptyprocess>=0.7.0
    pure-eval>=0.2.2
    pyasn1>=0.5.0
    Pygments>=2.16.1
    pyparsing>=3.0.9
    PySocks>=1.7.1
    python-dateutil>=2.8.2
    pytz>=2023.3
    pyzmq>=25.1.1
    rsa>=4.9
    seaborn>=0.12.2
    selenium>=4.11.2
    six>=1.16.0
    sniffio<=1.3.0
    sortedcontainers>=2.4.0
    stack-data>=0.6.2
    tomlkit>=0.12.1
    tornado>=6.3.3
    traitlets>=5.9.0
    trio>=0.22.2
    trio-websocket>=0.10.3
    tzdata>=2023.3
    urllib3>=2.0.4
    wcwidth>=0.2.6
    wsproto<=1.2.0
python_requires = >= 3.6
package_dir = =src
zip_save = no


[options.extras_require]
testing =
    asttokens>=2.2.1
    attrs>=23.1.0
    backcall>=0.2.0
    certifi>=2023.7.22
    comm>=0.1.4
    contourpy>=1.1.0
    cycler>=0.11.0
    debugpy>=1.6.7.post1
    decorator>=5.1.1
    exceptiongroup>=1.1.3
    executing>=1.2.0
    fonttools>=4.42.1
    h11>=0.14.0
    idna>=3.4
    ipykernel>=6.25.1
    ipython>=8.14.0
    jedi>=0.19.0
    jupyter_client>=8.3.0
    jupyter_core>=5.3.1
    kiwisolver>=1.4.5
    matplotlib>=3.7.2
    matplotlib-inline>=0.1.6
    nest-asyncio>=1.5.7
    numpy>=1.25.2
    outcome>=1.2.0
    packaging>=23.1
    pandas>=2.0.3
    parso>=0.8.3
    pexpect>=4.8.0
    pickleshare>=0.7.5
    Pillow>=10.0.0
    platformdirs>=3.10.0
    prompt-toolkit>=3.0.39
    psutil>=5.9.5
    ptyprocess>=0.7.0
    pure-eval>=0.2.2
    pyasn1>=0.5.0
    Pygments>=2.16.1
    pyparsing>=3.0.9
    PySocks>=1.7.1
    python-dateutil>=2.8.2
    pytz>=2023.3
    pyzmq>=25.1.1
    rsa>=4.9
    seaborn>=0.12.2
    selenium>=4.11.2
    six>=1.16.0
    sniffio<=1.3.0
    sortedcontainers>=2.4.0
    stack-data>=0.6.2
    tomlkit>=0.12.1
    tornado>=6.3.3
    traitlets>=5.9.0
    trio>=0.22.2
    trio-websocket>=0.10.3
    tzdata>=2023.3
    urllib3>=2.0.4
    wcwidth>=0.2.6
    wsproto<=1.2.0
    flake8>=6.1
    tox>=4.10
    pytest>=7.4
    pytest-cov>=4.0
    mypy>=1.5

[options.package_data]
LBM = py.typed

[flake8]
max-line-length = 160
